tests/paczka1/fuzzy1/84621786.err
Error in line 1: 3jUz627 A565 41,3
Error in line 4: 3jUz627 S175 45,1
Error in line 2: S85 A726 83,1
Error in line 11: fm56ZgD8 A726 72,5
Error in line 22: ILDgnz A726 2,1
Error in line 29: ILDgnz S175 29,9
Error in line 33: ILDgnz S85 92,7
